--- a/turf.html
+++ b/turf.html
@@ -13,11 +13,13 @@
     <h1>Book a Slot</h1>
   </header>
 
-  <section>
+  <section> 
     <h3>Select a Slot</h3>
     <div class="date-selector">
         <label for="booking-date">Select Date:</label>
         <input type="date" id="booking-date" name="booking-date" required>
+        <label for="name">Enter name</label>
+        <input type="text" id="booking-name" name="booking-name" required>
         <button type="button" id="reset-date-btn">Reset</button>
     </div>
 
@@ -40,8 +42,39 @@
     </div>
 
     <div class="confirm-container" style="margin: 30px auto; text-align: center;">
-    <button id="confirm-booking" class="confirm-button">Confirm Booking</button>
+    <button id="confirmBookingBtn" class="confirm-button" >Confirm Booking</button>
     </div>
+    <hr style="margin: 2rem 0;">
+
+<h3>Looking to Join Random Slot?</h3>
+<div style="text-align: center;">
+  <button class="confirm-button" onclick="joinAsSoloPlayer()">I'm a Solo Player</button>
+</div>
+
+<div id="availableTurfs" style="margin-top: 1rem; text-align: center; display: none;">
+  <h4>Turfs Looking for Players:</h4>
+  <ul id="vacantTurfList" style="list-style: none; padding: 0;"></ul>
+</div>
   </section>
+ <!-- Booking Summary Popup -->
+<div id="summaryPopup" class="login-popup" style="display: none;">
+  <div class="login-popup-content">
+    <h2>Booking Summary</h2>
+    <p id="summarySlot">Slot: </p>
+    <p id="summaryCost">Cost: </p>
+    <button onclick="proceedToPayment()">Pay Now</button>
+    <button onclick="closeSummary()">Cancel</button>
+  </div>
+</div>
+
+<!-- Payment Success Popup -->
+<div id="paymentSuccessPopup" class="login-popup" style="display: none;">
+  <div class="login-popup-content">
+    <h2>✅ Payment Successful!</h2>
+    <p>Your booking has been confirmed.</p>
+    <p id="orderDetails"></p>
+    <button onclick="closePaymentPopup()">OK</button>
+  </div>
+</div>
 </body>
 </html>
