--- a/bookings.html
+++ b/bookings.html
@@ -15,6 +15,22 @@
 
   <section id="myBookingsSection">
     <!-- Bookings will be rendered here -->
+    <div class="booking-card">
+      <h3>Urban Turf</h3>
+      <p>Date: 25 July 2025</p>
+      <p>Time: 5 PM – 6 PM</p>
+      <p><strong>Status:</strong> Confirmed</p>
+      <button onclick="cancelBooking(this)">Cancel</button>
+      <button onclick="rescheduleBooking(this)">Reschedule</button>
+    </div>
+    <div class="booking-card">
+      <h3>Galaxy Arena</h3>
+      <p>Date: 27 July 2025</p>
+      <p>Time: 8 AM – 9 AM</p>
+      <p><strong>Status:</strong> Confirmed</p>
+      <button onclick="cancelBooking(this)">Cancel</button>
+      <button onclick="rescheduleBooking(this)">Reschedule</button>
+    </div>
   </section>
 </body>
 </html>
