--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="bokings.html">Book Turf</a></li>
-        <li><a href="#about">About Us</a></li>
+        <li><a href="about.html">About Us</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
